--- a/friendly.html
+++ b/friendly.html
@@ -31,7 +31,7 @@
 </div>
 
 <div class="contact grow odd">
-<img class="profile" src="http://www.simpsoncrazy.com/content/pictures/lisa/LisaSimpson3.gif" width= 150px>
+<img class="profile" src="images/lisa.jpg" width= 150px>
 <h2>Lisa Simpson</h2>
 <p class="usernames">
 <img class="icon" src="http://www.freeiconspng.com/uploads/email-icon-23.png" width= 50px>
@@ -75,7 +75,7 @@
 </div>
 
 <div class="contact grow odd">
-<img class="profile" src="http://www.simpsoncrazy.com/content/pictures/lisa/LisaSimpson3.gif" width= 150px>
+<img class="profile" src="images/lisa.jpg" width= 150px>
 <h2>Lisa Simpson</h2>
 <p class="usernames">
 <img class="icon" src="http://www.freeiconspng.com/uploads/email-icon-23.png" width= 50px>
